--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div class="productCard">
           <img
             src="./assets/img/Coaching Co Activo.jpeg"
-            alt="Street Fighter 6"
+            alt="Coaching Activo"
           />
           <h2>Coaching Co-Activo</h2>
           <p><strong>Precio: $34.400</strong></p>
